# HW7-2

hw7/: config.ini  database.db  main.py  pyproject.toml  seeds.py
hw7/alembic/: env.py
hw7/alembic/versions/: c76deb0adb8f_init.py
hw7/database/: models.py
