[tool.poetry]
name = "hw7"
version = "0.1.0"
description = ""
authors = ["Oleksandr Malieiev <maleev1820@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.17"
alembic = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
